Adds max length validation in register name field

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NODE_ENV=development
 PORT=3000
-JWT_SECRET=
+JWT_SECRET=JmOXj6wSPjEoa2vTh_CzukkNAEhh1ijUPf2ce_InAD_tKqvY3bDhFV6QY57qJ4p_rR
 JWT_EXPIRATION_MINUTES=60
 MONGO_URI=
